fix z-index issue with datepicker on modals, allow cutoff date to be set

--- a/src/components/nepalidatepicker/NepaliDatePicker.css
+++ b/src/components/nepalidatepicker/NepaliDatePicker.css
@@ -13,7 +13,7 @@
 	direction: rtl;
 }
 .calendars-popup {
-	z-index: 1000;
+	z-index: 9999 !important;
 }
 .calendars-disable {
 	position: absolute;
